# python-project-52

./: .gitignore  Makefile  README.md  build.sh  db.sqlite3  pyproject.toml  render.yaml  sonar-project.properties
.github/workflows/: build.yml
task_manager/: admin.py  apps.py  forms.py  models.py  settings.py  tests.py  urls.py  views.py
task_manager/labels/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_rename_labels_label.py  0003_alter_label_label_name.py
task_manager/migrations/: 0001_initial.py  0002_rename_women_users.py  0003_users_last_name_users_password_and_more.py  0004_rename_name_users_first_name.py  0005_status_alter_users_options_alter_users_first_name_and_more.py  0006_rename_startus_name_status_status_name.py  0007_rename_status_statuses.py  0008_delete_statuses.py  0009_delete_users.py
task_manager/status/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/status/migrations/: 0001_initial.py  0002_alter_statuses_id.py  0003_alter_statuses_id.py  0004_alter_statuses_status_name.py
task_manager/tasks/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_tasks_description.py  0003_alter_tasks_executor_alter_tasks_status.py  (+6 more)
task_manager/templates/: delete.html  index.html  login.html  register.html  statuses.html  update.html  users.html
task_manager/tests/: test_forms.py  test_models.py
task_manager/users/: apps.py  forms.py  tests.py  urls.py  views.py
(+18 files in other folders)
