[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.1.0",
    "django>=4.2,<5.0",
    "django-bootstrap5>=26.1",
    "python-dotenv>=1.0.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.11",
    "uvicorn>=0.40.0",
    "whitenoise[brotli]>=6.11.0",
]
